tests/NormalTests/paczka1/fuzzy1/52058546.err
Error in line 2: pfFJLFo A552 87,4
Error in line 4: GLoJUE9jImf A552 -1,0
Error in line 5: 0YzR A1 51,5
Error in line 10: 0YzR A217 82,1
Error in line 3: pfFJLFo A1 15,4
Error in line 1: GLoJUE9jImf A552 20,9
Error in line 11: 0YzR A552 88,2
Error in line 7: A217 A552 51,2
Error in line 19: A217 A217 96,8
Error in line 13: pfFJLFo A217 92,1
Error in line 30: pfFJLFo S144 45,6
Error in line 37: 0YzR S144 19,4
